# nude-2.0

./: .gitignore  Dockerfile  pytest.ini  requirements.txt  setup.cfg
data/: .gitattributes
samples/: index.html
src/nude2/: benchmark.py  browse.py  cli.py  data.py  generate.py  model.py  model_v1.py  onnxify.py  progress.py  sample.py  serve.py  train.py  train_constants.py  utils.py
src/nude2/static/: index.html
test/: data_test.py  train_test.py
