[metadata]
name = nude2
version = 0.0.1
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/nude-2.0
description = Attempted recreation of the iconic Robbie Barrett's "The Nude"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nude
license = UNLICENSE
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
install_requires =
  onnxruntime==1.16.3
  Pillow==10.0.1
  pytest==7.4.3
  # torch==2.1.0
  # torchvision==0.16.0
  tqdm==4.66.1

[options.packages.find]
where = src
exclude =
  examples*
  # tools*
  # docs*

[options.entry_points]
console_scripts = 
  nude = nude2.cli:main
  

[options.package_data]
  example = data/schema.json, *.txt
  * = README.md
